# automail

./: Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs
src/apple/: mod.rs
src/microsoft/: mod.rs  request.rs  response.rs
src/mozilla/: mod.rs  response.rs
