[package]
name = "automail"
version = "0.1.0"
authors = ["S.J.R. van Schaik <stephan@synkhronix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
openssl = "0.10"
plist = "1"
quick-xml = { version = "0.20", features = [ "serialize" ] }
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
